Fix overflow-x

--- a/src/app/modules/main/qualifications/components/create-dialog/create-dialog.component.scss
+++ b/src/app/modules/main/qualifications/components/create-dialog/create-dialog.component.scss
@@ -4,7 +4,7 @@
 	text-align: center;
 	#form-content {
 		padding-bottom: unset;
-		overflow-x: unset;
+		overflow-x: unset !important;
 	}
 }
 
